--- a/react_ws_src/package.json
+++ b/react_ws_src/package.json
@@ -76,5 +76,8 @@
       "<rootDir>/node_modules/react-dom",
       "<rootDir>/node_modules/react-addons-test-utils"
     ]
+  },
+  "engines": {
+    "node": "<=18.20.6"
   }
 }
